--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -2,3 +2,9 @@ html {
   font-family: Helvetica;
   text-align: center;
 }
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+}
