--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -8,3 +8,7 @@ h1 {
   color: white;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
+h2{
+  font-size: 32px;
+  font-weight: bold;
+}
