--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -8,7 +8,30 @@ h1 {
   color: white;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
-h2{
+h2 {
   font-size: 32px;
   font-weight: bold;
+}
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+p {
+  font-size: 14px;
+}
+.nav {
+  font-size: 18px;
+  color: white;
+}
+#nyc {
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+}
+#copyright {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
 }
